--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>qr-code-component-main</title>
+    <title>QR code component</title>
     <link
       rel="shortcut icon"
-      href="images/favicon-32x32.png"
+      href="./images/favicon-32x32.png"
       type="image/x-icon"
     />
-    <link rel="stylesheet" href="styles/main.css" />
+    <link rel="stylesheet" href="./styles/main.css" />
   </head>
   <body>
-    <main class="box">
+    <div class="box" aria-label="qr box">
       <div class="box__img">
-        <img src="images/image-qr-code.png" alt="Qr" />
+        <img src="images/image-qr-code.png" alt="Qr image" />
       </div>
       <h1 class="box__title">
         improve your your front-end skills by building projects
@@ -24,6 +24,6 @@
         scan the qr code to visit frontend mentor and take your coding skills to
         the next level
       </p>
-    </main>
+    </div>
   </body>
 </html>
