--- a/index.html
+++ b/index.html
@@ -14,14 +14,12 @@
   </head>
   <body>
     <div class="box" aria-label="qr box">
-      <div class="box__img">
-        <img src="images/image-qr-code.png" alt="Qr image" />
-      </div>
+      <img src="images/image-qr-code.png" class="box__img" alt="Qr image" />
       <h1 class="box__title">
-        improve your your front-end skills by building projects
+        Improve your front-end skills by building projects
       </h1>
       <p class="box__content">
-        scan the qr code to visit frontend mentor and take your coding skills to
+        Scan the QR code to visit Frontend Mentor and take your coding skills to
         the next level
       </p>
     </div>
