--- a/index.html
+++ b/index.html
@@ -13,15 +13,17 @@
     <link rel="stylesheet" href="./styles/main.css" />
   </head>
   <body>
-    <div class="box" aria-label="qr box">
-      <img src="images/image-qr-code.png" class="box__img" alt="Qr image" />
-      <h1 class="box__title">
-        Improve your front-end skills by building projects
-      </h1>
-      <p class="box__content">
-        Scan the QR code to visit Frontend Mentor and take your coding skills to
-        the next level
-      </p>
-    </div>
+    <main>
+      <div class="box" aria-label="qr box">
+        <img src="images/image-qr-code.png" class="box__img" alt="Qr image" />
+        <h1 class="box__title">
+          Improve your front-end skills by building projects
+        </h1>
+        <p class="box__content">
+          Scan the QR code to visit Frontend Mentor and take your coding skills
+          to the next level
+        </p>
+      </div>
+    </main>
   </body>
 </html>
