inhanc accessibility index.html
- remove the aria-label attr from div.box

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <main>
-      <div class="box" aria-label="qr box">
+      <div class="box">
         <img src="images/image-qr-code.png" class="box__img" alt="Qr image" />
         <h1 class="box__title">
           Improve your front-end skills by building projects
