inhance accessibility index.html
- add aria-label to main tag index.html

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="./styles/main.css" />
   </head>
   <body>
-    <main>
+    <main aria-label="QR code component">
       <div class="box">
         <img src="images/image-qr-code.png" class="box__img" alt="Qr image" />
         <h1 class="box__title">
